--- a/css/float-grid.css
+++ b/css/float-grid.css
@@ -60,14 +60,14 @@
 
   /* 4 columns */
   .col-4 {
+    width: 33.333%;
   }
 
   /* 6 columns */
   .col-6 {
-
+    width: 50%;
   }
 
   /* 12 columns */
   .col-12 {
   }
-}
